/// Durations
const List<Map<String, dynamic>> durations = [
  {'id': 'a', 'name': '15 minutes'},
  {'id': 'b', 'name': '30 minutes'},
  {'id': 'c', 'name': '1 hour'},
  {'id': 'd', 'name': '2 hours'},
  {'id': 'e', 'name': '1 day'},
  {'id': 'f', 'name': '1 week'},
  {'id': 'g', 'name': '1 month'}
];
