/// Categories
const List<Map<String, dynamic>> categories = [
  {'id': 'a', 'name': 'Personal'},
  {'id': 'b', 'name': 'Software'},
  {'id': 'c', 'name': 'Telecom'}
];
