/// Branches
const List<Map<String, dynamic>> branches = [
  {'id': 'a', 'name': 'TOPdesk UK'},
  {'id': 'b', 'name': 'Branch b'},
  {'id': 'c', 'name': 'Branch c'},
  {'id': 'd', 'name': 'D Branch'},
  {'id': 'e', 'name': 'E Branch'},
  {'id': 'f', 'name': 'EE Branch'},
  {'id': 'g', 'name': 'EEE Branch'}
];
