/// Operators
const List<Map<String, dynamic>> operators = [
  {'id': 'a', 'name': 'Aagje'},
  {'id': 'b', 'name': 'Beatrijs'},
  {'id': 'c', 'name': 'Corneel'},
  {'id': 'd', 'name': 'Deesje'},
  {'id': 'e', 'name': 'Eduard'},
  {'id': 'f', 'name': 'Francisca'},
  {'id': 'g', 'name': 'Gertruide'},
  {'id': 'h', 'name': 'Dawn Meadows'},
];
